B-CHAOS-2: surface OutOfDirectMemoryError from write() as IOException
Netty's `OutOfDirectMemoryError` is a subclass of `OutOfMemoryError` →
`VirtualMachineError` → `Error`, not `RuntimeException`. Without an
explicit catch, it escaped `IoUringTransportLayer.write()` entirely:
the Selector's write step never routed the channel through `FAILED_SEND`,
the in-flight Send was silently abandoned, and the Error surfaced as an
unhandled crash in the Processor's run loop.

This is a Netty-level pool ceiling (`-Dio.netty.maxDirectMemory`), not a
JVM-wide OOM, so it is safe and correct to catch and recover from per
channel. Two sites are now defended:

1. The allocator call (`nettyChannel.alloc().directBuffer(safeChunk)`) is
   wrapped in its own try/catch that converts `OutOfDirectMemoryError`
   into an `IOException("direct buffer allocation failed", e)`. This is
   the dominant failure site — the buffer is allocated on every write.

2. The inner catch around `writeAndFlush` / `addListener` is broadened
   from `RuntimeException` to `RuntimeException | OutOfDirectMemoryError`,
   in case a pipeline encoder allocates internally during the flush and
   the pool ceiling is hit there.

The catch is deliberately narrow: we do NOT catch general
`OutOfMemoryError` or `Error`. Those signal JVM-wide failure where the
broker is already past saving and continuing is worse than letting the
process die.

Regression test `writeSurfacesOutOfDirectMemoryErrorFromAllocatorAsIOException`
injects the failure via a custom `ByteBufAllocator` whose `directBuffer()`
throws `OutOfDirectMemoryError`. It asserts:
  - write() throws IOException, NOT the bare Error
  - the cause chain preserves the original OutOfDirectMemoryError so
    operators can attribute the failure to direct-memory pressure
  - src ByteBuffer position/limit are untouched — the alloc throws
    before writeBytes(), so a retry by ByteBufferSend.writeTo would not
    skip bytes the broker never actually sent

Anti-tautology verifi